src/test/ui/generic-associated-types/issue-88360.stderr
error[E0308]: mismatched types
  --> $DIR/issue-88360.rs:14:9
   |
LL | trait SuperTrait<T>
   |                  - this type parameter
...
LL |     fn copy(&self) -> Self::Gat<'_> where T: Copy {
   |                       ------------- expected `&T` because of return type
LL |         *self.test()
   |         ^^^^^^^^^^^^
   |         |
   |         expected `&T`, found type parameter `T`
   |         help: consider borrowing here: `&*self.test()`
   |
   = note:   expected reference `&T`
           found type parameter `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
